--- a/example11/index.html
+++ b/example11/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag.js"></script>
-		<!-- initialize drag and drop -->
+		<!-- initialize REDIPS.drag library -->
 		<script type="text/javascript">
 			// onload event
 			window.onload = function () {
@@ -13,10 +13,9 @@
 				REDIPS.drag.border = 'none';
 				// initialization
 				REDIPS.drag.init();
-				// dragged elements can be placed to the empty cells only
+				// DIV elements can be dropped to the empty cells only
 				REDIPS.drag.drop_option = 'single';
 			};
-			
 		</script>
 		<title>www.redips.net</title>
 	</head>
