example10 - modifying HTML and DIV containers

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 07: <a href="example07/">A B C D</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 16: <a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 08: <a href="example08/">Tables in separated containers</a></div></td>
