Adding readme.txt to the example16

--- a/example16/index.html
+++ b/example16/index.html
@@ -15,7 +15,8 @@
     	
     	<!-- title -->
 		<center>
-			<h2>Choose questions and place it to the blue tables</h2>
+			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-row/">www.redips.net</a></h1>
+			<h2>Example 16: AJAX, hover, sticky, dragging</h2>
 		</center>
 		
 		<!-- tables inside this DIV could have draggable content -->
