Comments, fixing example07 ...

--- a/example07/index.html
+++ b/example07/index.html
@@ -6,34 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag.js"></script>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			window.onload = function () {
-				var rd = REDIPS.drag;	// reference to the REDIPS.drag class
-				// initialization
-				rd.init();
-				// dragged elements can be placed to the empty cells only
-				rd.drop_option = 'single';
-				// define A and B source elements for the last row only (element ID and class name of the last row)
-				rd.only.div.a = 'last';
-				rd.only.div.b = 'last';
-				// A and B elements can't be placed to other table cells (this is default value)
-				rd.only.other = 'deny';
-				// set hover color
-				rd.hover_color = '#9BB3DA';
-				// after element is cloned define dropping for last row - only for clones of element A or element B
-				rd.myhandler_cloned = function () {
-					// define variables
-					var cloned_id = rd.obj.id; // cloned id
-					// if cloned if begins with a or b define dropping only for last row
-					if (cloned_id.substr(0, 1) === 'a' || cloned_id.substr(0, 1) === 'b') {   
-						rd.only.div[cloned_id] = 'last';
-					}
-				}
-				// or cloned elements can be defined one by one
-//				rd.only.div.ac0 = 'last';
-//				rd.only.div.bc0 = 'last';
-			}
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
 	<body>
