--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<center>
 			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Drag and drop table content/rows with JavaScript - Version 4.1.1</h2>
+			<h2>Drag and drop table content/rows with JavaScript - Version 4.2.0</h2>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
@@ -71,7 +71,7 @@
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 08: <a href="example08/">Tables in separated containers</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 17: <a href="example17/">Move object (animation)</a></div></td>
 				</tr>
 				<tr>
 					<td></td>
