Working on example17

--- a/example17/index.html
+++ b/example17/index.html
@@ -162,6 +162,10 @@
 					</tbody>
 				</table>
 			</div>
+			<!-- reset button -->
+			<div>
+				<input type="button" value="Reset" onclick="javascript:reset()"/>
+			</div>
 		</center>
 	</body>
 </html>
