fixed BUG when row was dropped to the last row position in table

--- a/example17/index.html
+++ b/example17/index.html
@@ -12,7 +12,11 @@
 		<center>
 			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-row/">www.redips.net</a></h1>
 			<h2>Example 17: Move object (animation)</h2>
-
+			<!-- reset button -->
+			<div>
+				<input type="button" value="Reset" onclick="javascript:reset()"/>
+				<input type="button" value="Shuffle" onclick="javascript:shuffle()"/>
+			</div>
 			<!-- first drag region -->
 			<div id="drag1">
 				<table>
@@ -161,10 +165,6 @@
 						</tr>
 					</tbody>
 				</table>
-			</div>
-			<!-- reset button -->
-			<div>
-				<input type="button" value="Reset" onclick="javascript:reset()"/>
 			</div>
 		</center>
 	</body>
