--- a/index.html
+++ b/index.html
@@ -27,58 +27,74 @@
 	<body>
 		<center>
 			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Drag and drop table content/rows with JavaScript - Version 4.2.1</h2>
+			<h2>Drag and drop table content/rows with JavaScript - Version 4.3.0</h2>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
 			<table id="table1">
 				<!-- define table columns -->
 				<colgroup>
-					<col width="320"/>
-					<col width="320"/>
+					<col width="240"/>
+					<col width="240"/>
+					<col width="240"/>
 				</colgroup>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 00: <a href="example00/">Minimal steps</a></div></td>
-					<td><div id="link1" class="drag t1">Example 09: <a href="example09/">Single and switching mode</a></div></td>
+					<td><div id="link1" class="drag t1">Example 00<br/><a href="example00/">Minimal steps</a></div></td>
+					<td><div id="link1" class="drag t1">Example 10<br/><a href="example10/">Sticky tables</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 01: <a href="example01/">Three tables</a></div></td>
-					<td><div id="link1" class="drag t1">Example 10: <a href="example10/">Sticky tables</a></div></td>
+					<td><div id="link1" class="drag t1">Example 01<br/><a href="example01/">Three tables</a></div></td>
+					<td><div id="link1" class="drag t1">Example 11<br/><a href="example11/">Drag handle on titlebar</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 02: <a href="example02/">Green and orange elements</a></div></td>
-					<td><div id="link1" class="drag t1">Example 11: <a href="example11/">Drag handle on titlebar</a></div></td>
+					<td><div id="link1" class="drag t1">Example 02<br/><a href="example02/">Green and orange elements</a></div></td>
+					<td><div id="link1" class="drag t1">Example 12<br/><a href="example12/">Select and move more elements</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 03: <a href="example03/index.php">School timetable</a> (<a href="example03/index_static.html">static</a>)</div></td>
-					<td><div id="link1" class="drag t1">Example 12: <a href="example12/">Select and move more elements</a></div></td>
+					<td><div id="link1" class="drag t1">Example 03<br/><a href="example03/index.php">School timetable</a> (<a href="example03/index_static.html">static</a>)</div></td>
+					<td><div id="link1" class="drag t1">Example 13<br/><a href="example13/">Nested tables</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 04: <a href="example04/">Tic Tac Toe</a></div></td>
-					<td><div id="link1" class="drag t1">Example 13: <a href="example13/">Nested tables</a></div></td>
+					<td><div id="link1" class="drag t1">Example 04<br/><a href="example04/">Tic Tac Toe</a></div></td>
+					<td><div id="link1" class="drag t1">Example 14<br/><a href="example14/">Sort elements in long table</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 05: <a href="example05/">Scrollable DIV containers</a></div></td>
-					<td><div id="link1" class="drag t1">Example 14: <a href="example14/">Sort elements in long table</a></div></td>
+					<td><div id="link1" class="drag t1">Example 05<br/><a href="example05/">Scrollable DIV containers</a></div></td>
+					<td><div id="link1" class="drag t1">Example 15<br/><a href="example15/">Drag and drop table rows</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 06: <a href="example06/">Scrollable and fixed containers</a></div></td>
-					<td><div id="link1" class="drag t1">Example 15: <a href="example15/">Drag and drop table rows</a></div></td>
+					<td><div id="link1" class="drag t1">Example 06<br/><a href="example06/">Scrollable and fixed containers</a></div></td>
+					<td><div id="link1" class="drag t1">Example 16<br/><a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 07: <a href="example07/">A B C D</a></div></td>
-					<td><div id="link1" class="drag t1">Example 16: <a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
+					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/">A B C D</a></div></td>
+					<td><div id="link1" class="drag t1">Example 17<br/><a href="example17/">Move object (animation)</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td><div id="link1" class="drag t1">Example 08: <a href="example08/">Tables in separated containers</a></div></td>
-					<td><div id="link1" class="drag t1">Example 17: <a href="example17/">Move object (animation)</a></div></td>
+					<td><div id="link1" class="drag t1">Example 08<br/><a href="example08/">Tables in separated containers</a></div></td>
+					<td><div id="link1" class="drag t1">Example 18<br/><a href="example18/">Simple element animation</a> / <a href="example18/index1.html">row</a></div></td>
+					<td></td>
 				</tr>
 				<tr>
+					<td><div id="link1" class="drag t1">Example 09<br/><a href="example09/">Single and switching mode</a></div></td>
 					<td></td>
 					<td></td>
 				</tr>
 				<tr>
-					<td colspan="2" id="message" class="mark" title="Message line">Message line</td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td colspan="3" id="message" class="mark" title="Message line">Message line</td>
 				</tr>
 			</table>
 		</div>
