--- a/example18/index1.html
+++ b/example18/index1.html
@@ -4,7 +4,7 @@
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content/rows with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../redips-drag.js"></script>
+		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script1.js"></script>
 		<title>www.redips.net</title>
 	</head>
@@ -18,7 +18,7 @@
 			</div>
 			<!-- drag region -->
 			<div id="drag">
-				<table>
+				<table id="table1">
 					<colgroup>
 						<col width="70"/>
 						<col width="70"/>
@@ -30,7 +30,7 @@
 					</colgroup>
 					<tbody>
 						<tr class="rl">
-							<td><div id="d1" class="drag orange">Hello</div></td>
+							<td><div class="drag orange">Drag</div></td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -40,7 +40,7 @@
 						</tr>
 						<tr class="rd">
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">and</div></td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -50,7 +50,7 @@
 						<tr class="rl">
 							<td></td>
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">drop</div></td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -60,7 +60,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">table</div></td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -70,7 +70,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">content</div></td>
 							<td></td>
 							<td></td>
 						</tr>
@@ -80,7 +80,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">with</div></td>
 							<td></td>
 						</tr>
 						<tr class="rl">
@@ -90,7 +90,7 @@
 							<td></td>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td><div class="drag orange">JavaScript</div></td>
 						</tr>
 					</tbody>
 				</table>
