--- a/example08/index.html
+++ b/example08/index.html
@@ -4,7 +4,7 @@
 		<meta name="author" content="Darko Bunic"/>
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../redips-drag.js"></script>
+		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
 		<script type="text/javascript">
 			window.onload = function () {
