--- a/example16/index.html
+++ b/example16/index.html
@@ -5,7 +5,7 @@
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style-screen.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="style-print.css" type="text/css" media="print" />
-		<script type="text/javascript" src="../redips-drag.js"></script>
+		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
