--- a/example06/index.html
+++ b/example06/index.html
@@ -315,8 +315,8 @@
 					</table>
 				</div><!-- right container -->
 			</div><!-- drag container -->
-			<!-- needed for creating DIV elements -->
-			<div id="obj_new"></div>
+			<!-- needed for cloning DIV elements -->
+			<div id="redips_clone"></div>
 			<!-- message -->
 			<div id="message">Clone element with SHIFT key</div>
 		</div><!-- main container -->
