--- a/example11/index.html
+++ b/example11/index.html
@@ -5,17 +5,8 @@
 		<meta name="description" content="Drag and drop table content with JavaScript"/>
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
-		<!-- initialize REDIPS.drag library -->
-		<script type="text/javascript">
-			// onload event
-			window.onload = function () {
-				// define border style
-				REDIPS.drag.border = 'none';
-				// initialization
-				REDIPS.drag.init();
-				// DIV elements can be dropped to the empty cells only
-				REDIPS.drag.drop_option = 'single';
-			};
+		<!-- initialize drag and drop -->
+		<script type="text/javascript" src="script.js"></script>
 		</script>
 		<title>www.redips.net</title>
 	</head>
@@ -38,16 +29,28 @@
 							<tr>
 								<td class="dark">
 									<div id="a" class="drag clone">
-										<div class="nodrag">redips</div>
+										<div class="nodrag">
+											<table id="mini" class="nolayout">
+												<colgroup>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+													<col width="10"/>
+												</colgroup>
+												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+											</table>
+										</div>
 									</div>
 								</td>
 							</tr>
 							<tr>
-								<td class="dark">
-									<div id="o" class="drag clone">
-										<div class="nodrag">spider</div>
-									</div>
-								</td>
+								<td class="trash">Trash</td>
 							</tr>
 						</tbody>
 					</table>
