--- a/example11/index.html
+++ b/example11/index.html
@@ -23,32 +23,32 @@
 				<div id="left">
 					<table id="table1">
 						<colgroup>
-							<col width="100"/>
+							<col width="200"/>
 						</colgroup>
 						<tbody>
 							<tr>
 								<td class="dark">
-									<div id="a" class="drag clone">
+									<div class="drag clone">
 										<div class="nodrag">
-											<table id="mini" class="nolayout">
+											<table id="mini">
 												<colgroup>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
-													<col width="10"/>
+													<col width="39"/>
+													<col width="39"/>
+													<col width="39"/>
+													<col width="39"/>
+													<col width="39"/>
 												</colgroup>
-												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-												<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+												<tr><td></td><td></td><td></td><td></td><td></td></tr>
+												<tr><td></td><td></td><td></td><td></td><td></td></tr>
+												<tr><td></td><td></td><td></td><td></td><td></td></tr>
 											</table>
 										</div>
 									</div>
 								</td>
 							</tr>
+							<tr>
+								<td class="dark"><div class="drag clone circle"></div></td>
+							</tr>							
 							<tr>
 								<td class="trash">Trash</td>
 							</tr>
@@ -60,25 +60,25 @@
 				<div id="right">
 					<table id="table2">
 						<colgroup>
-							<col width="100"/>
-							<col width="100"/>
-							<col width="100"/>
+							<col width="200"/>
+							<col width="200"/>
+							<col width="200"/>
 						</colgroup>
 						<tbody>
 							<tr>
 								<td></td>
 								<td></td>
-								<td class="upper_right"></td>
+								<td></td>
 							</tr>
 							<tr>
 								<td></td>
 								<td></td>
-								<th></th>
+								<td></td>
 							</tr>
 							<tr>
-								<td class="lower_left"></td>
-								<th></th>
-								<th></th>
+								<td></td>
+								<td></td>
+								<td></td>
 							</tr>
 						</tbody>
 					</table>
