--- a/example11/index.html
+++ b/example11/index.html
@@ -30,7 +30,7 @@
 								<td class="dark">
 									<div class="drag clone">
 										<div class="nodrag">
-											<table id="mini">
+											<table id="mini" class="mini">
 												<colgroup>
 													<col width="39"/>
 													<col width="39"/>
