--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<center>
 			<h1><a href="http://www.redips.net/javascript/drag-and-drop-table-content/">www.redips.net</a></h1>
-			<h2>Drag and drop table content/rows with JavaScript - Version 4.4.1</h2>
+			<h2>Drag and drop table content/rows with JavaScript - Version 4.4.2</h2>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
@@ -85,7 +85,7 @@
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 09<br/><a href="example09/">Single and switching mode</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 19<br/><a href="example19/">Groups and table rows</a></div></td>
 					<td></td>
 				</tr>
 				<tr>
