--- a/example08/index.html
+++ b/example08/index.html
@@ -6,16 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			window.onload = function () {
-				var rd = REDIPS.drag;	// reference to the REDIPS.drag class
-				// DIV container initialization
-				rd.init('drag1');
-				rd.init('drag2');
-				// elements could be cloned with pressed SHIFT key (for demo)
-				rd.clone_shiftKey = true;
-			}
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
 	<body>
