--- a/example20/index.html
+++ b/example20/index.html
@@ -16,7 +16,7 @@
 
 		<!-- tables inside this DIV could contain drag-able content  -->
 		<div id="drag">
-			<table class="tbl1">
+			<table id="tbl1">
 				<colgroup>
 					<col width="30"/>
 					<col width="100"/>
@@ -27,55 +27,55 @@
 				</colgroup>
 				<tbody>
 					<tr>
-						<th colspan="6" class="mark">Table 2</th>
-					</tr>
-					<tr class="rd">
-						<td class="rowhandler"><div class="drag row clone"></div></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-					</tr>
-					<tr class="rl">
-						<td class="rowhandler"><div class="drag row"></div></td>
-						<td><div class="drag orange">Drag</div></td>
-						<td></td>
-						<td class="cdark"></td>
-						<td></td>
-						<td><div class="drag orange">rows</div></td>
-					</tr>
-					<tr class="rl">
-						<td class="rowhandler"><div class="drag row"></div></td>
-						<td></td>
-						<td class="cdark"></td>
-						<td></td>
-						<td class="cdark"></td>
-						<td></td>
-					</tr>
-					<tr class="rl">
-						<td class="rowhandler"><div class="drag row"></div></td>
-						<td class="cdark"></td>
-						<td><div class="drag orange">and</div></td>
-						<td></td>
-						<td><div class="drag orange">table</div></td>
-						<td class="cdark"></td>
+						<th colspan="6" class="mark">Table 1</th>
 					</tr>
 					<tr class="rd">
 						<td class="rowhandler"><div class="drag row"></div></td>
 						<td></td>
 						<td></td>
-						<td><div class="drag blue">drop</div></td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr class="rl">
+						<td class="rowhandler"><div class="drag row"></div></td>
+						<td></td>
+						<td></td>
+						<td class="cdark"><div class="drag orange">drop</div></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr class="rl">
+						<td class="rowhandler"><div class="drag row"></div></td>
+						<td></td>
+						<td class="cdark"><div class="drag blue">and</div></td>
+						<td></td>
+						<td class="cdark"><div class="drag blue">table</div></td>
+						<td></td>
+					</tr>
+					<tr class="rl">
+						<td class="rowhandler"><div class="drag row"></div></td>
+						<td class="cdark"><div class="drag orange">Drag</div></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="cdark"><div class="drag orange">rows</div></td>
+					</tr>
+					<tr class="rd">
+						<td class="rowhandler"><div class="drag row"></div></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td colspan="6" class="mark"><span>Message line</span></td>
+						<td colspan="6" class="mark"><span id="msg">Message line</span></td>
 					</tr>
 				</tbody>
 			</table>
 
-			<table class="tbl2">
+			<table id="tbl2">
 				<colgroup>
 					<col width="30"/>
 					<col width="100"/>
@@ -89,7 +89,7 @@
 						<th colspan="6" class="mark">Table 2</th>
 					</tr>
 					<tr class="rd">
-						<td class="rowhandler"><div class="drag row"></div></td>
+						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -109,6 +109,10 @@
 					</tr>
 				</tbody>
 			</table>
+		</div>
+		<!-- instructions -->
+		<div class="inst">
+			Clone elements and table rows with SHIFT key
 		</div>
 	</body>
 </html>
