--- a/example05/index.html
+++ b/example05/index.html
@@ -6,18 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			// onload event
-			window.onload = function () {
-				// initialization
-				REDIPS.drag.init();
-				// dragged elements can be placed to the empty cells only
-				REDIPS.drag.drop_option = 'single';
-				// elements could be cloned with pressed SHIFT key
-				REDIPS.drag.clone_shiftKey = true;
-			}
-			
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
 	<body>
