--- a/example09/index.html
+++ b/example09/index.html
@@ -6,39 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			// reference to the REDIPS.drag lib (global variable)
-			var rd = REDIPS.drag;
-
-			// startup 
-			window.onload = function () {
-				// initialization
-				rd.init();
-				// "moved" event handler uses reference of the moved element
-				rd.myhandler_moved = function () {
-					set_drop_option(rd.obj);
-				}
-				// "cloned" event handler uses reference of the source element (not cloned element)
-				rd.myhandler_cloned	= function () {
-					set_drop_option(rd.obj_old);
-				}
-			}
-
-			// set drop option regarding to the table where DIV element belongs
-			function set_drop_option (el) {
-				// loop up until found table
-				while (el && el.nodeName !== 'TABLE') {
-					el = el.parentNode;
-				}
-				// loop ends and "el" position should be table
-				if (el.id === 'table1') {
-					rd.drop_option = 'switching';
-				}
-				else {
-					rd.drop_option = 'single';
-				}
-			}
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
 	<body>
