--- a/example10/index.html
+++ b/example10/index.html
@@ -7,17 +7,7 @@
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<title>www.redips.net</title>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			// onload event
-			window.onload = function () {
-				// initialization
-				REDIPS.drag.init();
-				// dragged elements can be placed to the empty cells only
-				REDIPS.drag.drop_option = 'single';
-				// elements could be cloned with pressed SHIFT key
-				REDIPS.drag.clone_shiftKey = true;
-			}
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
 
