--- a/example14/index.html
+++ b/example14/index.html
@@ -6,17 +6,7 @@
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
-		<script type="text/javascript">
-			// reference to the REDIPS.drag lib (global variable)
-			var rd = REDIPS.drag;
-			// startup 
-			window.onload = function () {
-				// initialization
-				rd.init();
-				// set switching drop option
-				rd.drop_option = 'switching';
-			}
-		</script>
+		<script type="text/javascript" src="script.js"></script>
 		<title>www.redips.net</title>
 	</head>
 	<body>
